src/card/card.css
:root {
  --card-shadow: var(--shadow);
  --card-shadow-focus: var(--shadow-focus);
  --outline-color: var(--text-dark);
  --outline-size: 2px;
  --outline-offset: 2px;
  --action-outline-color: var(--text-dark);
}

ul.cards {
  padding: 0;
  container-type: inline-size;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
  grid-gap: var(--columns-gap);

  &:has(> li:only-child) {
    grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
  }

  > li {
    margin-block: 0;
    border: 1px solid var(--utility-light-grey);
    border-radius: var(--border-radius);
    list-style: none;
    display: flex;
    flex-direction: column;

    img {
      aspect-ratio: 3 / 2;
      max-inline-size: 100%;
      block-size: auto;
      border-start-start-radius: var(--border-radius);
      border-start-end-radius: var(--border-radius);
      object-fit: cover;
      object-position: center;
      margin: unset;
      order: 1;

      &[data-image-fit="contain"] {
        object-fit: contain;
      }
    }

    article {
      padding: var(--space-unit-x3);
      margin: 0;
      order: 2;
      display: inline-flex;
      flex-direction: column;
      height: 100%;

      .action {
        background: var(--brand-secondary);
        color: white;
        display: inline-block;
        margin-top: auto;
        padding-block: var(--space-unit-1);
        padding-inline: var(--space-unit-x3);
        border-radius: calc(var(--border-radius) * 1.5);
        box-shadow: var(--card-shadow);
        order: 3;
        transition: all var(--transition) ease;
        text-decoration: none;
        width: fit-content;

        &:hover,
        &:focus {
          box-shadow: var(--card-shadow-focus);
          background: oklch(40% 0.12 234);
          transform: scale(var(--scale));
          color: var(--text-white);
        }

        &:active {
          transform: scale(var(--scale));
          background: var(--brand-primary);
        }

        &:focus-visible {
          outline: var(--outline-size) solid var(--action-outline-color);
          outline-offset: var(--outline-offset, var(--outline-size));
        }
      }
    }

    h1,
    h2,
    h3,
    h4,
    h5 {
      font-weight: 700;
      font-size: var(--text-size-4);
      line-height: var(--text-lineheight-medium);
      margin-top: 0;

      > a {
        color: inherit;
        text-decoration: none;
      }
    }

    p {
      max-width: unset;
    }
  }

  &[data-orientation^="media"] > li {
    display: flex;
    flex-direction: row;
    height: 100%;

    img {
      border-start-start-radius: var(--border-radius);
      border-start-end-radius: 0;
      border-end-start-radius: var(--border-radius);
      border-end-end-radius: 0;
      max-block-size: 100%;
      max-inline-size: 33%;
    }
  }

  &[data-orientation="media-end"] > li {
    flex-direction: row-reverse;

    img {
      border-start-start-radius: 0;
      border-start-end-radius: var(--border-radius);
      border-end-start-radius: 0;
      border-end-end-radius: var(--border-radius);
    }

    article {
      flex-grow: 2;
    }
  }

  &[data-filter="desaturated"] li img {
    filter: saturate(20%);
  }

  &[data-action="interactive"] {
    > li {
      box-shadow: var(--card-shadow);
      cursor: pointer;
      transition: all var(--transition) ease-out;
      justify-content: start;
      position: relative;

      &:focus-within {
        outline: var(--outline-size) solid var(--outline-color);
        outline-offset: var(--outline-offset, var(--outline-size));

        a:focus {
          outline: none;
        }

        img {
          filter: saturate(100%);
        }
      }

      > a {
        display: block;

        &::before {
          content: "";
          position: absolute;
          height: 100%;
          width: 100%;
          top: 0;
          left: 0;
          z-index: 1;
        }
      }

      &:hover,
      &:focus {
        transform: scale(var(--scale));
        box-shadow: var(--card-shadow-focus);

        a:not(.action) {
          color: var(--brand-hover-dark);
          text-decoration: underline;
        }
      }

      &:active {
        transform: scale(var(--scale));
      }
    }

    img {
      margin-block-start: unset;
    }
  }

  @media (prefers-color-scheme: dark) {
    :root {
      --card-shadow: 0.2rem 0.2rem 0.5em 0 rgba(255, 255, 255, 0.25);
      --card-shadow-focus: 0.1rem 0.1rem 0.25em 0 rgba(255, 255, 255, 0.1);
      --outline-color: var(--text-white);
    }

    .action {
      box-shadow: var(--shadow);

      &:focus-visible {
        outline-color: var(--white);
      }
    }

    &[data-action="interactive"] > li:hover a:not(.action),
    &[data-action="interactive"] > li:focus a:not(.action) {
      color: var(--brand-hover-light);
    }
  }

  @container (max-width: 34rem) {
    &[data-orientation^="media"] > li,
    &[data-orientation="media-end"] > li {
      flex-direction: column;

      img {
        max-block-size: 100%;
        max-inline-size: 100%;
        border-start-start-radius: var(--border-radius);
        border-start-end-radius: var(--border-radius);
        border-end-start-radius: 0;
        border-end-end-radius: 0;
      }
    }
  }
}

